--- a/hw/xquartz/Makefile.am
+++ b/hw/xquartz/Makefile.am
@@ -9,16 +9,12 @@ AM_CPPFLAGS = \
 	-DXFree86Server \
 	-I$(top_srcdir)/miext/rootless
 
-if X11APP
-X11APP_SUBDIRS = bundle
-endif
-
-SUBDIRS = . GL xpr $(X11APP_SUBDIRS)
-DIST_SUBDIRS = GL xpr bundle
+SUBDIRS = bundle . GL xpr stub
 
 libXquartz_la_SOURCES = \
 	$(top_srcdir)/fb/fbcmap_mi.c \
 	$(top_srcdir)/mi/miinitext.c \
+	bundle/bundle-main.c \
 	X11Application.m \
 	X11Controller.m \
 	applewm.c \
