--- a/hw/xquartz/bundle/Info.plist
+++ b/hw/xquartz/bundle/Info.plist
@@ -20,6 +20,10 @@
 		<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 		<string>2.3.0</string>
+	<key>CFBundleVersion</key>
+		<string>2.3.0</string>
+	<key>CFBundleVersionString</key>
+		<string>2.3.0</string>
 	<key>CFBundleSignature</key>
 		<string>x11a</string>
 	<key>CSResourcesFileMapped</key>
