Support for BSD apm XXX check amd64 pci init

--- a/configure.ac
+++ b/configure.ac
@@ -272,6 +272,15 @@ if test -c /dev/xf86 ; then
 	AC_DEFINE(HAS_APERTURE_DRV, 1, [System has /dev/xf86 aperture driver])
 fi
 
+dnl BSD APM support 
+AC_CHECK_HEADER([machine/apmvar.h],[
+	AC_CHECK_HEADER([sys/event.h],
+		ac_cv_BSD_KQUEUE_APM=yes,
+		ac_cv_BSD_APM=yes)])
+
+AM_CONDITIONAL(BSD_APM, [test "x$ac_cv_BSD_APM" = xyes])
+AM_CONDITIONAL(BSD_KQUEUE_APM, [test "x$ac_cv_BSD_KQUEUE_APM" = xyes])
+	
 dnl glibc backtrace support check (hw/xfree86/common/xf86Events.c)
 AC_CHECK_HEADER([execinfo.h],[
     AC_CHECK_LIB(c, backtrace, [
@@ -1268,6 +1277,10 @@ if test "x$XORG" = xyes; then
 		xorg_bus_bsdpci="yes"
 		;;
 	  openbsd*)
+		if test "x$ac_cv_BSD_APM" = xyes \
+			-o "x$ac_cv_BSD_KQUEUE_APM" = xyes; then
+			XORG_CFLAGS="$XORG_CFLAGS -DXF86PM"
+		fi
 	  	XORG_OS="openbsd"
 		XORG_OS_SUBDIR="bsd"
 		xorg_bus_bsdpci="yes"
