--- a/include/xorg-config.h.in
+++ b/include/xorg-config.h.in
@@ -118,6 +118,9 @@
 /* Have pci_system_init_dev_mem() */
 #undef HAVE_PCI_SYSTEM_INIT_DEV_MEM
 
+/* Have pci_enable_device */
+#undef HAVE_PCI_DEVICE_ENABLE
+
 /* Path to text files containing PCI IDs */
 #undef PCI_TXT_IDS_PATH
 
