Get out of the mesa symlinking business.
This copies over the files generated from mesa/src/mesa/glapi.  There's
a corresponding mesa commit that makes it easy to generate the glapi files
straight into the xserver tree when the XML definitions change.

The only few files that are copied from mesa but aren't generated are
glapi.[ch] and glthread.[ch].  Everything in there is technically DRI
driver API and the whole setup is still a bit fragile, but it's not a new
problem.

The --with-mesa-source configure option is still around since other
parts of the server (XGL and DMX - grep for MESA_SOURCE) need that,
but for common case of building with GLX and AIGLX support, that
option is no longer needed.

--- a/GL/glx/Makefile.am
+++ b/GL/glx/Makefile.am
@@ -5,14 +5,11 @@ endif
 noinst_LTLIBRARIES = libglx.la $(GLXDRI_LIBRARY)
 
 AM_CFLAGS = \
-	-I@MESA_SOURCE@/include \
 	@DIX_CFLAGS@ \
 	@GL_CFLAGS@ \
 	@XLIB_CFLAGS@ \
 	@LIBDRM_CFLAGS@ \
 	@DRIPROTO_CFLAGS@ \
-	-I@MESA_SOURCE@/src/mesa/glapi \
-	-I@MESA_SOURCE@/src/mesa/main \
 	-DXFree86Server \
 	@GLX_DEFINES@ \
 	@GLX_ARCH_DEFINES@
@@ -28,18 +25,23 @@ INCLUDES = \
 	-I$(top_srcdir)/hw/xfree86/dri2 \
 	-I$(top_srcdir)/mi
 
-
-nodist_libglx_la_SOURCES = indirect_size.h \
-			   glapi.c \
-			   glthread.c \
-			   indirect_dispatch.c \
-			   indirect_dispatch.h \
-			   indirect_dispatch_swap.c \
-			   indirect_reqsize.c \
-			   indirect_reqsize.h \
-			   indirect_size_get.c \
-			   indirect_size_get.h \
-			   indirect_table.c
+glapi_sources =					\
+	indirect_dispatch.c			\
+	indirect_dispatch.h			\
+	indirect_dispatch_swap.c		\
+	indirect_reqsize.c			\
+	indirect_reqsize.h			\
+	indirect_size.h				\
+	indirect_size_get.c			\
+	indirect_size_get.h			\
+	indirect_table.c			\
+	dispatch.h				\
+	glapitable.h				\
+	glapitemp.h				\
+	glapi.c					\
+	glapi.h					\
+	glthread.c				\
+	glthread.h
 
 libglxdri_la_SOURCES = \
         glxdri.c \
@@ -48,7 +50,13 @@ libglxdri_la_SOURCES = \
         extension_string.h
 
 libglx_la_SOURCES = \
-	$(XQUARTZ_libglx_la_SOURCES) \
+	$(indirect_sources) \
+	$(glapi_sources) \
+	indirect_util.c \
+	indirect_util.h \
+	indirect_program.c \
+	indirect_table.h \
+	indirect_texture_compression.c \
         g_disptab.h \
         glxbyteorder.h \
         glxcmds.c \
@@ -64,11 +72,6 @@ libglx_la_SOURCES = \
         glxserver.h \
         glxutil.c \
         glxutil.h \
-        indirect_program.c \
-        indirect_table.h \
-        indirect_texture_compression.c \
-        indirect_util.c \
-        indirect_util.h \
         render2.c \
         render2swap.c \
         renderpix.c \
