Move GL/glx on level up now that it's the only thing left under GL.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ MFB_DIR=mfb
 endif
 
 if GLX
-GLX_DIR=GL
+GLX_DIR=glx
 endif
 
 if DBE
@@ -94,7 +94,7 @@ DIST_SUBDIRS = \
 	damageext \
 	XTrap \
 	composite \
-	GL \
+	glx \
 	exa \
 	config \
 	hw
