--- a/hw/xquartz/GL/Makefile.am
+++ b/hw/xquartz/GL/Makefile.am
@@ -2,7 +2,7 @@ noinst_LTLIBRARIES = libCGLCore.la
 AM_CFLAGS = $(XSERVER_CFLAGS) $(DIX_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
-	-I$(top_srcdir)/GL/glx \
+	-I$(top_srcdir)/glx \
 	-I$(top_srcdir)/GL/include \
 	-I$(top_srcdir)/GL/mesa/glapi \
 	-I$(top_srcdir)/hw/xquartz \
