XQuartz: Switched over to new startup path for testing.  Cleaned it up a bit.  Server still crashes when using the icon to launch =/ (cherry picked from commit 7f840e9dc180421eaa9b0ea3ab993fdd5b2466e5)

--- a/hw/xquartz/Makefile.am
+++ b/hw/xquartz/Makefile.am
@@ -7,8 +7,8 @@ AM_CPPFLAGS = \
 	-DINXQUARTZ \
 	-DUSE_NEW_CLUT \
 	-DXFree86Server \
-	-I$(top_srcdir)/miext/rootless
-#	-DNEW_LAUNCH_METHOD
+	-I$(top_srcdir)/miext/rootless \
+	-DNEW_LAUNCH_METHOD
 
 SUBDIRS = bundle . GL xpr mach-startup doc
 
