XFree86: Remove useless debugging code
Also remove documentation which told you how to use a non-module-aware
GDB, albeit only with old, non-shared, modules.

--- a/hw/xfree86/common/Makefile.am
+++ b/hw/xfree86/common/Makefile.am
@@ -5,10 +5,6 @@ if XORG_BUS_SPARC
 SBUS_SOURCES = xf86sbusBus.c
 endif
 
-if DEBUG
-DEBUGSOURCES = xf86Debug.c
-endif
-
 if XV
 XVSOURCES = xf86xv.c xf86xvmc.c
 XVSDKINCS = xf86xv.h xf86xvmc.h
@@ -37,8 +33,7 @@ libcommon_la_SOURCES = xf86Configure.c xf86Bus.c xf86Config.c \
                       xf86VidMode.c xf86fbman.c xf86cmap.c \
                       xf86Helper.c xf86PM.c xf86RAC.c \
                       xf86Mode.c xf86Build.h xorgHelper.c xf86Versions.c \
-                      $(XVSOURCES) $(BUSSOURCES) $(DEBUGSOURCES) \
-		      $(XISOURCES) $(RANDRSOURCES)
+                      $(XVSOURCES) $(BUSSOURCES) $(XISOURCES) $(RANDRSOURCES)
 nodist_libcommon_la_SOURCES = xf86DefModeSet.c
 libinit_a_SOURCES = xf86Build.h xf86Init.c
 
