Fix GLX in Xvfb and kdrive.

--- a/hw/kdrive/vesa/Makefile.am
+++ b/hw/kdrive/vesa/Makefile.am
@@ -27,5 +27,7 @@ Xvesa_DEPENDENCIES =	\
 	libvesa.a 				\
 	@KDRIVE_LOCAL_LIBS@
 
+Xvesa_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
+
 relink:
 	rm -f $(bin_PROGRAMS) && make $(bin_PROGRAMS)
