--- a/hw/kdrive/ephyr/Makefile.am
+++ b/hw/kdrive/ephyr/Makefile.am
@@ -78,6 +78,8 @@ Xephyr_DEPENDENCIES =	\
 	$(LIBXEPHYR_HOSTDRI)				\
 	@KDRIVE_LOCAL_LIBS@
 
+Xephyr_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
+
 relink:
 	rm -f $(bin_PROGRAMS) && make $(bin_PROGRAMS)
 
