--- a/hw/kdrive/sdl/Makefile.am
+++ b/hw/kdrive/sdl/Makefile.am
@@ -13,5 +13,7 @@ Xsdl_LDADD = \
 
 Xsdl_DEPENDENCIES = @KDRIVE_LOCAL_LIBS@
 
+Xsdl_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
+
 relink:
 	rm -f $(bin_PROGRAMS) && make $(bin_PROGRAMS)
